# arcsign

./: .gitignore  .gitleaks.toml  .golangci.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_PLATFORM_BUILD.md  DEBUGGING.md  GENERATE_ALL_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  LICENSE  MAINTAINERS.md  MANUAL_TESTING_GUIDE.md  MVP_RELEASE_CHECKLIST.md  Makefile  NOTICE  OFFICIAL_ADDRESSES.md  PERFORMANCE_VALIDATION.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SCAM_TOKEN_FILTER.md  SECURITY.md  SECURITY_ARCHITECTURE.md  SECURITY_AUDIT_2026-01-12.md  SECURITY_REVIEW.md  SECURITY_VERIFICATION_COMPLETE.md  SESSION_TOKEN_MIGRATION_TEST.md  TOKEN_LIST_LOADING_TIMING_FIX.md  TRADEMARK.md  USER_GUIDE.md  WHITELIST_TOKEN_FILTER.md  build.bat  go.mod  go.sum  start-dev-with-logs.sh  view-logs.sh  (+1 more)
.claude/: settings.local.json
.github/: CODEOWNERS  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-library.yml  build-verify.yml  ci.yml  dco.yml  gitleaks.yml  labeler.yml  performance-tests.yml  release.yml  reproducible-build.yml  stale.yml
.specify/006-chain-adapter/: spec.md
.specify/memory/: constitution.md
_archived/cli-arcsign-backup-20251104/: handlers.go  main.go
_archived/cli-legacy-20251104/: README.md
cmd/arcsign/: main.go
contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: ArcSignPro.sol  ArcSignProTestnet.sol  ArcSignReferral.sol  MockERC20.sol
contracts/deployments/: bsc-referral.json  bsc.json  bscTestnet-bnb.json  bscTestnet.json
contracts/metadata/: arcsign-pro-metadata.json  baseuri-update-bsc.json
contracts/scripts/: check-uri.js  deploy-referral.js  deploy-testnet-bnb.js  deploy-testnet.js  deploy.js  set-base-uri.js  test-dev-mode.js  test-explorer-api.js  test-hardhat-plugin.js  upload-metadata.js  verify-mint-tx.js
contracts/test/: ArcSignPro.security.test.js  ArcSignPro.test.js  ArcSignProTestnet.test.js  ArcSignReferral.test.js
dashboard/: .env.example  .gitignore  MANUAL_TESTING_CHECKLIST.md  PROVIDER_INTEGRATION.md  STARTUP_GUIDE.md  SYSTEM_SPECIFICATION.md  TESTING_GUIDE.md  TOKEN_LISTS.md  WALLETCONNECT_KNOWN_ISSUES.md  WALLETCONNECT_PHASE1_COMPLETE.md  WALLETCONNECT_PROGRESS.md  WALLETCONNECT_USER_GUIDE.md  generate-source-icon.ps1  index.html  package-lock.json  package.json  quickstart.md  start-app.bat  start-dev.bat  start-frontend-only.bat  stop-all.bat  vite.config.ts  vitest.config.ts
dashboard/scripts/: test-dev-mode.mjs
dashboard/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
dashboard/src-tauri/: Cargo.toml  build.rs  libarcsign_amd64.h  libarcsign_arm64.h  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: create_icons.sh  generate_icon.ps1  icon.icns
dashboard/src-tauri/src/: error.rs  logger.rs  main.rs
dashboard/src-tauri/src/cli/: mod.rs  types.rs  wrapper.rs
dashboard/src-tauri/src/commands/: app.rs  auth.rs  dev_history.rs  dev_session.rs  dev_settings.rs  export.rs  membership.rs  mod.rs  provider.rs  security.rs  swap.rs  transaction.rs  usb.rs  wallet.rs  walletconnect.rs  websocket_commands.rs
dashboard/src-tauri/src/ffi/: bindings.rs  mod.rs  queue.rs  types.rs
dashboard/src-tauri/src/models/: address.rs  mod.rs  wallet.rs
dashboard/src-tauri/src/websocket/: handler.rs  mod.rs  pairing.rs  protocol.rs  server.rs
dashboard/tests/: setup.ts
docs/: IMPLEMENTATION_STATUS.md  MULTI_COIN_ADDRESSES.md  architecture.md  pgp-pubkey.asc  reproducible-builds.md
internal/app/: config.go  dev_session.go  dev_session_test.go  session.go  session_test.go  storage.go  wallet_session.go  wallet_session_test.go
internal/cli/: errors.go  mode.go  output.go
internal/constants/: business.go  business_test.go
internal/contacts/: store.go
internal/lib/: errors.go  exports.go  exports_abicache.go  exports_address.go  exports_app.go  exports_dev.go  exports_membership.go  exports_provider.go  exports_signing.go  exports_signing_test.go  exports_swap.go  exports_transaction.go  exports_wallet.go  sign_helper.go  sign_helper_test.go
internal/models/: account.go  address.go  metrics.go  mnemonic.go  models_test.go  wallet.go
internal/provider/: abi_cache.go  abi_cache_test.go  alchemy_client.go  alchemy_types.go  approval_enrich_test.go  approval_risk.go  approval_risk_test.go  balance_addresses.go  balance_addresses_test.go  bsctrace_client.go  chains.go  chains_test.go  common_tokens.go  config.go  defillama_client.go  defillama_client_test.go  degraded.go  degraded_test.go  glacier_client.go  glacier_client_test.go  malicious_spenders.go  malicious_spenders_test.go  multicall.go  (+15 more)
scripts/: prepare-downloads.sh  test-eth-address.sh  test_address_derivation.go  test_import_wallet.go  update-token-lists.sh  version.js
(+505 files in other folders)
