[package]
name = "arcsign-dashboard"
version = "1.5.2"
description = "ArcSign HD Wallet Dashboard"
authors = ["ArcSign Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
# Tauri v2 plugins (replaces v1 allowlist)
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.4"
tauri-plugin-process = "2.3"
tauri-plugin-updater = "2.10"
tauri-plugin-opener = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
libloading = "0.8"  # T001: FFI dynamic library loading
zeroize = "1.7"     # T002: Secure memory zeroing for sensitive data
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for BSC RPC calls
tokio-tungstenite = "0.21"  # WebSocket server for mint-page integration
futures-util = "0.3"        # Async stream utilities
aes-gcm = "0.10"            # AES-256-GCM encryption for WalletConnect session storage
hmac = "0.12"               # HMAC for session integrity
sha2 = "0.10"               # SHA-256 for key derivation
hkdf = "0.12"               # HKDF for key derivation from session token
rand = "0.8"                # Random nonce generation
subtle = "2"               # constant-time pairing-code comparison
uuid = { version = "1.6", features = ["v4"] }  # UUID generation for dev mode
hex = "0.4"                 # Hex encoding/decoding

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Tauri v2: feature flags moved to Cargo.toml features
# Developer mode: enables dev session commands for testnet auto-signing
# MUST NOT be included in production builds
dev-mode = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
